--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4",
     "router": "^1.3.7",
     "sass": "^1.54.9",
     "swiper": "^8.4.2",
