--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "pg": "^8.8.0",
+    "query-string": "^7.1.1",
     "sequelize": "^6.21.6"
   },
   "devDependencies": {
