--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.1",
     "router": "^1.3.7",
     "sass": "^1.54.9",
     "swiper": "^8.4.2",
